--- a/index-sophie.html
+++ b/index-sophie.html
@@ -25,10 +25,12 @@
             <p>content: "a string"; </p>
             <p>Een string. Dit kunnen woorden of cijfers zijn. </p>
         </li>
+
         <li>
             <p>content: url(/path/to/image.jpg); </p>
             <p>Een plaatje </p>
         </li>
+
         <li>
             <p>content: ""; </p>
             <p>Niks. Dan kun je vormen of overlays maken </p>
@@ -41,37 +43,43 @@
         <li>
             <h3>Optie 1: ::before</h3>
             <a href="#">KOOP NU!</a>
+            <img src="images/hover>.png" alt="">
+
             <a href="#">KOOP NU!</a>
+            <img src="images/emoji.png" alt="">
         </li>
+
         <li>
             <h3>Optie 2: ::after bij een knop</h3>
             <button>HOVER OVER MIJ</button>
+            <img src="images/hoverknop.png" alt="">
         </li>
+
         <li>
             <h3>Optie 3: Foto overlay</h3>
             <div>
             <img src="images/lucht.jpeg" alt="foto van de lucht">
             </div>
+            <img src="images/hoveroverlay.png" alt="">
         </li>
+
         <li>
             <h3>Optie 4: ::after bij checkbox</h3>
             <form>
                 <input type="checkbox" name="optie 1">
                 <label for="optie 1"> Optie 1</label>
             </form>
+            <img src="images/checkedstatus.png" alt="">
         </li>
+
         <li>
             <h3>Optie 5: blurry fotoborder</h3>
             <div>
             <img src="images/lucht.jpeg" alt="foto van de lucht">
             </div>
+            <img src="images/blurryrand.png" alt="">
         </li>
     </ul>
-
-    
-
-
-
 
     </main>
 </body>
